# papilio-tempestae

./: .gitignore  Cargo.toml  build.rs  flake.nix
.cargo/: config.toml
assets/shaders/: render_shaders.template.wgsl  render_shaders.wgsl  simplex.wgsl  terrain.template.wgsl  terrain.wgsl  water.wgsl
examples/: check_layout.rs  planet_lod.rs  verify_flat_terrain.rs  verify_heightmap.rs
patches/glam-0.24.2/src/: deref.rs  f32.rs  f64.rs  i32.rs  i64.rs  lib.rs  spirv.rs  u32.rs  u64.rs
patches/glam-0.24.2/src/bool/: bvec2.rs  bvec3.rs  bvec4.rs
patches/glam-0.24.2/src/bool/coresimd/: bvec3a.rs  bvec4a.rs
patches/glam-0.24.2/src/bool/scalar/: bvec3a.rs  bvec4a.rs
patches/glam-0.24.2/src/bool/sse2/: bvec3a.rs  bvec4a.rs
patches/glam-0.24.2/src/bool/wasm32/: bvec3a.rs  bvec4a.rs
patches/glam-0.24.2/src/f32/: affine2.rs  affine3a.rs  mat3.rs  vec2.rs  vec3.rs
patches/glam-0.24.2/src/f32/coresimd/: mat2.rs  mat3a.rs  mat4.rs  quat.rs  vec3a.rs  vec4.rs
patches/glam-0.24.2/src/f32/scalar/: mat2.rs  mat3a.rs  mat4.rs  quat.rs  vec3a.rs  vec4.rs
patches/glam-0.24.2/src/f32/sse2/: mat2.rs  mat3a.rs  mat4.rs  quat.rs  vec3a.rs  (+1 more)
patches/glam-0.24.2/src/f64/: daffine2.rs  daffine3.rs  dmat2.rs  dmat3.rs  dmat4.rs  dquat.rs  dvec2.rs  dvec3.rs  dvec4.rs
patches/glam-0.24.2/src/i32/: ivec2.rs  ivec3.rs  ivec4.rs
patches/glam-0.24.2/src/i64/: i64vec2.rs  i64vec3.rs  i64vec4.rs
patches/glam-0.24.2/src/u32/: uvec2.rs  uvec3.rs  uvec4.rs
patches/glam-0.24.2/src/u64/: u64vec2.rs  u64vec3.rs  u64vec4.rs
planet-shader/: Cargo.toml
planet-shader/src/: lib.rs
(+6 files in other folders)
