[package]
name = "papilio-tempestae"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "*"
bytemuck = { version = "1.25.0", features = ["derive"] }
noiz = "*"
wgpu = "*"
planet-shader = { path = "planet-shader" }

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", branch = "main" }
naga = { version = "*", features = ["spv-in", "wgsl-out"] }

[workspace]
members = [
    ".",
    "planet-shader"
]

[patch.crates-io]
glam = { path = "patches/glam-0.24.2" }

