[package]
name = "planet-shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", branch = "main", default-features = false }
glam = { version = "0.24", default-features = false, features = ["libm", "scalar-math"] }

